kubernetes/apps/app-cluster/media/sonarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Series library automation (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://sonarr.krapulax.home"
    gethomepage.dev/icon: "sonarr.png"
    gethomepage.dev/name: "Sonarr (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - sonarr.krapulax.home
  rules:
    - backendRefs:
        - name: sonarr
          namespace: media
          port: 8989
