kubernetes/apps/app-cluster/media/sonarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/description: Series library automation
    gethomepage.dev/weight: "50"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - sonarr.krapulax.dev
  rules:
    - backendRefs:
        - name: sonarr
          namespace: media
          port: 8989
